# frida-kahlo

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.development/: CHECKLIST.md  CODE-REVIEW.md  DESIGN.md  ENVIRONMENT.md  PHASE1-REPORT.md  PHASE2-REPORT.md  PHASE3-REPORT.md  PHASE4-REPORT.md  PHASE5-6-REPORT.md  RESEARCH.md  STEALTH-REFERENCE.md  STRUCTURE.md
.playwright-cli/: page-2026-03-28T04-43-02-502Z.yml  page-2026-03-28T04-43-12-718Z.yml  page-2026-03-28T04-43-20-345Z.yml  page-2026-03-28T04-43-26-117Z.yml  page-2026-03-28T04-59-37-168Z.yml  page-2026-03-28T04-59-41-564Z.yml  page-2026-03-28T04-59-51-953Z.yml  page-2026-03-28T05-05-45-640Z.yml  page-2026-03-28T05-05-51-124Z.yml  page-2026-03-28T05-05-55-976Z.yml  page-2026-03-28T05-06-09-217Z.yml
.research/: 001-frida-automation-state-of-art.md  002-android-analysis-framework-architecture.md  003-claude-code-frida-integration.md  004-frida-anti-detection.md  005-api-recreation-from-frida.md  006-claude-code-re-case-study.md  007-previous-experiments.md  008-yakitoriya-scan-analysis.md  009-http-intercept-improvement.md  README.md
docs/plans/: 2026-03-26-phase1-foundation.md  (+4 more)
kahlo/: __init__.py  cli.py  monitor.py  pipeline.py
scripts/: common.js  discovery.js
tests/: test_acquire.py  test_adb.py  test_aggregate.py  test_analyze.py  test_auth.py  test_cli.py  test_decoder.py  test_diff.py  test_discovery.py  test_flows.py  test_frida_server.py  test_hooks.py  test_instrument.py  test_monitor.py  test_pipeline.py  test_postman.py  test_report.py  test_scan.py  test_static.py  test_stealth.py
(+46 files in other folders)
