[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "frida-kahlo"
version = "0.1.0"
description = "CLI framework for automated Android app analysis via Frida"
requires-python = ">=3.11"
dependencies = [
    "frida>=17.0",
    "frida-tools>=14.0",
    "typer>=0.12",
    "rich>=13.0",
    "pydantic>=2.0",
]

[project.scripts]
kahlo = "kahlo.cli:app"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-timeout>=2.0"]
static = ["androguard>=4.0"]
acquire = ["playwright>=1.40"]

[tool.hatch.build.targets.wheel]
packages = ["kahlo"]

[tool.pytest.ini_options]
addopts = "-p no:logfire"
